<resources>
    <string name="app_name">FirtApplication</string>
    <string name="distance">Distância</string>
    <string name="total_per_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">KMs por litro</string>
    <string name="total_spend">Seu gasto total será de</string>
    <string name="total_value">R$</string>
    <string name="calculate">Calcular</string>
    <string name="fill_all_fields">Todos os valores devem ser preenchidos</string>
</resources>